src/app/common/components/AppRoot.scss
/*
  componentPath: src/app/common/components/AppRoot
  cssComponentId: app-root_vc3j5h_vc3j5h
*/
@import '../../../common/styles/colors';

.app-root_vc3j5h {
	position: relative;
	height: 100%;
	display: flex;
	flex-flow: column;
}
.app-root_vc3j5h > .content {
	flex: 1 1 auto;
	position: relative;
	overflow: hidden;
	height: 100%;
}
.app-root_vc3j5h > .content > .screens {
	position: relative;
	overflow: hidden;
	height: 100%;
}
.app-root_vc3j5h > .content > .screens > .screen {
	position: absolute;
	width: 100%;
	height: 100%;
	overflow: scroll;
	-webkit-overflow-scrolling: touch;
	box-sizing: border-box;
	z-index: 1;
}
.app-root_vc3j5h > .content > .screens > .screen + .screen.slide-in {
	animation: app-root_vc3j5h-screen-slide-in 250ms forwards;
}
.app-root_vc3j5h > .content > .screens > .screen + .screen.slide-out {
	animation: app-root_vc3j5h-screen-slide-out 250ms forwards;
}

@keyframes app-root_vc3j5h-screen-slide-in {
	from {
		transform: translateX(100%);
	}
	to {
		transform: translateX(0);
	}
}
@keyframes app-root_vc3j5h-screen-slide-out {
	from {
		transform: translateX(0);
	}
	to {
		transform: translateX(100%);
	}
}

@include theme using ($root, $scheme) {
	#{$root} .app-root_vc3j5h > .content > .screens > .screen  {
		@include theme-colors(
			$scheme,
			(
				"background-color": $app-background-color
			)
		);
	}
}

